kubernetes-manifests/configmaps/environment/rairmarket/media-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-maxs-age: "172800"
    kubernetes.io/ingress.global-static-ip-name: "ms-rairmarket-ip"
spec:
  rules:
  - host: ms.rair.market
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: media-service
            port: 
              number: 5002
